<resources>
    <string name="documento_identidad">Doc. Identidad</string>
    <string name="documento_identidad_rev">Doc. Identidad Reverso</string>
    <string name="postulant_evaluation_empty_section">Debe ingresar la sección</string>
    <string name="unete_paso1_valid_tipo_documento_select">Debe seleccionar el Tipo de Documento</string>
    <string name="unete_paso1_valid_nombres_empty">Debe completar el campo Nombres</string>
    <string name="unete_paso1_valid_primer_nombre_empty">Debe completar el campo Primer Nombre</string>
    <string name="unete_paso1_valid_segundo_nombre_empty">Debe completar el campo Segundo Nombre</string>
    <string name="unete_paso1_valid_apellido_paterno_empty">Debe completar el campo Apellido Paterno</string>
    <string name="unete_paso1_valid_apellido_materno_empty">Debe completar el campo Apellido Materno</string>
    <string name="unete_paso1_valid_documento_empty">Debe completar el campo Documento de Identidad</string>
    <string name="unete_paso1_valid_documento_min_length">Valide el formato o la cantidad de digitos del campo Documento de Identidad</string>
    <string name="unete_paso1_valid_codigo_recom_min_length">Ingrese un codigo de consultora válido</string>
    <string name="unete_paso1_valid_documento_format">Valide el formato del campo Documento de Identidad</string>
    <string name="unete_paso1_valid_rut">Valide el formato del campo RUT</string>
    <string name="unete_paso1_valid_nacimiento_empty">Debe completar el campo Fecha de Nacimiento</string>
    <string name="unete_paso1_valid_date_wrong_format">Error en el formato de fecha</string>
    <string name="unete_paso1_valid_correo_empty">Debe completar el campo Correo</string>
    <string name="unete_paso1_accept_terms">Debes aceptar el acuerdo de consulta crediticia.</string>
    <string name="unete_paso1_error_sign">Debes agregar tu firma</string>
    <string name="unete_paso1_sign">Firmar</string>
    <string name="unete_paso1_update_sign">Volver a firmar</string>
    <string name="unete_paso1_valid_correo_format">Debe ingresar un correo válido</string>
    <string name="unete_paso1_valid_legal_primer_nombre_empty">Debe completar el campo Primer Nombre Legal</string>
    <string name="unete_paso1_valid_legal_segundo_nombre_empty">Debe completar el campo Segundo Nombre Legal</string>
    <string name="unete_paso1_valid_legal_apellido_paterno_empty">Debe completar el campo Apellido Paterno Legal</string>
    <string name="unete_paso1_valid_legal_apellido_materno_empty">Debe completar el campo Apellido Materno Legal</string>
    <string name="unete_paso1_valid_legal_tipo_documento_select">Debe seleccionar el Tipo de Documento Legal</string>
    <string name="unete_paso1_valid_legal_documento_empty">Debe completar el campo Documento de Identidad Legal</string>
    <string name="unete_paso1_valid_legal_documento_min_length">Valide el formato o la cantidad de digitos del campo Documento de Identidad Legal</string>
    <string name="unete_paso1_valid_legal_nacimiento_empty">Debe completar el campo Fecha de Nacimiento Legal</string>
    <string name="unete_paso1_valid_legal_correo_empty">Debe completar el campo Correo Legal</string>
    <string name="unete_paso1_valid_legal_correo_format">Debe ingresar un correo válido Legal</string>
    <string name="unete_paso2_valid_select">Debe seleccionar</string>
    <string name="unete_paso2_valid_canton_select">Debe seleccionar el Canton</string>
    <string name="unete_paso2_valid_corregimiento_select">Debe seleccionar el Corregimiento</string>
    <string name="unete_paso2_valid_distrito_select">Debe seleccionar el Distrito</string>
    <string name="unete_paso2_valid_barrio_select">Debe seleccionar el Barrio</string>
    <string name="unete_pe_paso3_meta_title">META</string>
    <string name="unete_pe_paso3_meta_tipo">TIPO</string>
    <string name="unete_pe_paso3_meta_monto">MONTO</string>
    <string name="unete_pe_paso3_meta_descripcion">DESCRIPCIÓN</string>
    <string name="unete_pe_paso3_list_meta_tipo">TIPO DE META:</string>
    <string name="unete_pe_paso3_list_meta_monto">MONTO DE META:</string>
    <string name="unete_pe_paso3_list_meta_descripcion">DESCRIPCION DE META:</string>
    <string name="unete_pe_paso3_list_aval_documento">DOCUMENTO DE IDENTIDAD AVAL:</string>
    <string name="unete_pe_paso3_aval_primer_nombre">PRIMER NOMBRE</string>
    <string name="unete_pe_paso3_aval_segundo_nombre">SEGUNDO NOMBRE</string>
    <string name="unete_pe_paso3_aval_primer_apellido">PRIMER APELLIDO</string>
    <string name="unete_pe_paso3_aval_segundo_apellido">SEGUNDO APELLIDO</string>
    <string name="unete_pe_paso3_aval_nacimiento">FECHA DE NACIMIENTO</string>
    <string name="unete_pe_paso3_aval_direccion">DIRECCIÓN COMPLETA</string>
    <string name="unete_pe_paso3_aval_tipo">TIPO DE VÍNCULO</string>
    <string name="unete_pe_paso3_aval_telefono_fijo">TELÉFONO FIJO</string>
    <string name="unete_pe_paso3_aval_telefono_celular">TELÉFONO CELULAR</string>
    <string name="unete_pe_paso3_aval_documento">DOCUMENTO DE IDENTIDAD</string>
    <string name="unete_pe_paso3_valid_aval_primer_nombre_empty">Debe completar el campo Primer Nombre Aval</string>
    <string name="unete_pe_paso3_valid_aval_primer_apellido_empty">Debe completar el campo Primer Apellido Aval</string>
    <string name="unete_pe_paso3_valid_aval_segundo_apellido_empty">Debe completar el campo Segundo Apellido Aval</string>
    <string name="unete_pe_paso3_valid_aval_nacimiento_empty">Debe completar el campo Fecha de Nacimiento Aval</string>
    <string name="unete_pe_paso3_valid_aval_direccion_empty">Debe completar el campo Dirección Completa Aval</string>
    <string name="unete_pe_paso3_valid_aval_vinculo_select">Debe seleccionar el Aval Vinculo</string>
    <string name="unete_pe_paso3_valid_aval_documento_empty">Debe completar el campo Documento de Identidad Aval</string>
    <string name="unete_pe_paso3_valid_aval_documento_min_length">Valide el formato o la cantidad de digitos del campo Documento de Identidad Aval</string>
    <string name="unete_pe_paso3_valid_aval_telefono_celular_empty">Debe completar el campo Celular o Telefono Aval</string>
    <string name="unete_pe_paso3_valid_aval_celular_empty">Debe completar el campo Celular Aval</string>
    <string name="unete_pe_paso3_valid_aval_celular_format">Valide el formato o la cantidad de digitos del campo Celular Aval</string>
    <string name="unete_pe_paso3_valid_aval_celular_repeat">Valide que no se repita el mismo numero varias veces en el campo Celular Aval</string>
    <string name="unete_pe_paso3_valid_aval_telefono_empty">Debe completar el campo Telefono Aval</string>
    <string name="unete_pe_paso3_valid_aval_telefono_format">Valide el formato o la cantidad de digitos del campo Telefono Aval</string>
    <string name="unete_pe_paso3_valid_aval_telefono_repeat">Valide que no se repita el mismo numero varias veces en el campo Telefono Aval</string>
    <string name="unete_pe_paso3_valid_meta_tipo_select">Debe seleccionar el Tipo de Meta</string>
    <string name="unete_pe_paso3_valid_meta_monto_empty">Debe completar el Monto de Meta</string>
    <string name="unete_pe_paso3_valid_meta_descripcion_empty">Debe completar la Descripcion de la Meta</string>
    <string name="zonificacion_aceptar">Si</string>
    <string name="zonificacion_cancelar">No</string>
    <string name="zonificacion_title">Ubicación</string>
    <string name="quitar_documento">Eliminar</string>
    <string name="unete_valid_paso1">Debe completar los campos del Paso 1</string>
    <string name="unete_paso1_valid_postulante_title">Validar Postulante</string>
    <string name="unete_paso1_valid_postulante_title_datos_apta">Datos Apta</string>
    <string name="unete_paso1_valid_postulante_title_datos_belcorp">Datos Belcorp</string>
    <string name="unete_paso1_valid_postulante_title_datos_proveedor_externo">Datos Proveedor Externo</string>
    <string name="unete_paso1_valid_postulante_description">Ocurrio un error al Validar la Postulante, intente nuevamente.</string>
    <string name="unete_paso1_valid_complete_paso">Debe completar el paso %s primero.</string>
    <string name="unete_paso1_valid_consultora_title">Validar Consultora</string>
    <string name="unete_paso1_valid_consultora_postulante">Estimada Socia: La solicitud se encuentra en proceso de evaluación.</string>
    <string name="unete_paso1_valid_registro_proceso">La postulante ya tiene un registro en proceso. Ayúdala a terminarla en Somos Belcorp o comunícate con SAC.</string>
    <string name="unete_paso1_valid_consultora_existe">Estimada Socia: La postulante %s ya es una consultora de belleza.</string>
    <string name="unete_paso1_consultora_contado">La postulante ha sido rechazada por la evaluación crediticia. ¿Deseas incorporarla como consultora sin crédito?</string>
    <string name="unete_paso1_consultora_contado_new">La postulante debe ser incorporada como consultora Pago al Contado y aprovechar los beneficios de Mi Tienda On Line.</string>
    <string name="unete_paso1_consultora_contado_new_only_pe">La postulante debe ser incorporada como consultora Pago al Contado y aprovechar los beneficios de Mi Tienda Online. Recuerda que luego de pasar pedido 3 campañas consecutivas podrá optar a crédito cumpliendo las condiciones establecidas.</string>
    <string name="unete_paso4_primer_nombre_ref_familiar">PRIMER NOMBRE REF. FAMILIAR</string>
    <string name="unete_paso4_apellido_paterno_ref_familiar">APELLIDO PATERNO REF. FAMILIAR</string>
    <string name="unete_paso4_tipo_vinculo_ref_familiar">TIPO DE VÍNCULO REF. FAMILIAR</string>
    <string name="unete_paso4_telefono_celular_ref_familiar">TELÉFONO CELULAR REF. FAMILIAR</string>
    <string name="unete_paso4_telefono_fijo_ref_familiar">TELÉFONO FIJO REF. FAMILIAR</string>
    <string name="unete_paso4_primer_nombre_no_familiar">PRIMER NOMBRE NO FAMILIAR</string>
    <string name="unete_paso4_apellido_paterno_no_familiar">APELLIDO PATERNO NO FAMILIAR</string>
    <string name="unete_paso4_aval_ciudad">CIUDAD GARANTE</string>
    <string name="unete_paso4_telefono_celular_no_familiar">TELÉFONO CELULAR NO FAMILIAR</string>
    <string name="unete_paso4_telefono_fijo_no_familiar">TELÉFONO FIJO NO FAMILIAR</string>
    <string name="tipo_meta">Tipo meta</string>
    <string name="rechazar">RECHAZAR</string>
    <string name="aprobar">APROBAR</string>
    <string name="validar">VALIDAR CRÉDITO</string>
    <string name="editar_datos">EDITAR DATOS</string>
    <string name="rut">RUT</string>
    <string name="primer_nombre">Primer Nombre</string>
    <string name="segundo_nombre">Segundo Nombre</string>
    <string name="apellito_paterno">Apellido Paterno</string>
    <string name="apellito_materno">Apellido Materno</string>
    <string name="telefono_celular">Celular</string>
    <string name="telefono_fijo">Teléfono Fijo</string>
    <string name="direccion">Dirección</string>
    <string name="nombres">Nombre</string>
    <string name="apellidos">Apellido</string>
    <string name="direccion_completa">Dirección Completa</string>
    <string name="tipo_vinculo">Tipo de Vínculo</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="nivel_educativo">Nivel Educativo</string>
    <string name="monto">Monto</string>
    <string name="monto_descripcion">Descripción</string>
    <string name="seccion_aval">AVAL</string>
    <string name="seccion_ref_familiar">REFERENCIA FAMILIAR</string>
    <string name="seccion_ref_no_familiar">REFERENCIA NO FAMILIAR</string>
    <string name="seccion_meta">META</string>
    <string name="unete_bo_paso4_seccion_aval">GARANTE</string>
    <string name="unete_bo_paso4_nit_ref_familiar">NIT</string>
    <string name="unete_bo_paso4_estado_civil">Estado civil</string>
    <string name="unete_bo_paso4_nivel_educativo">Nivel educativo</string>
    <string name="campos_obligatorios">*Campos Obligatorios</string>
</resources>