<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <biz.belcorp.salesforce.modules.postulants.features.widget.inputs.USpinner
        android:id="@+id/spnEstadoCivil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hasSelection="true"
        custom:hint="@string/unete_bo_paso4_estado_civil" />

    <biz.belcorp.salesforce.modules.postulants.features.widget.inputs.USpinner
        android:id="@+id/spnNivelEducativo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hasSelection="true"
        custom:hint="@string/unete_bo_paso4_nivel_educativo" />


    <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
        android:id="@+id/txtPrimerNombreRefFamiliar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hint="@string/unete_paso4_primer_nombre_ref_familiar" />

    <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
        android:id="@+id/txtApellidoPaternoRefFamiliar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hint="@string/unete_paso4_apellido_paterno_ref_familiar" />

    <biz.belcorp.salesforce.modules.postulants.features.widget.inputs.USpinner
        android:id="@+id/spnTipoVinculoFamiliar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hint="@string/unete_paso4_tipo_vinculo_ref_familiar"
        custom:validateIconVisible="false" />

    <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
        android:id="@+id/txtNITRefFamiliar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hint="@string/unete_bo_paso4_nit_ref_familiar" />

    <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
        android:id="@+id/txtTelefonoCelularRefFamiliar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hint="@string/unete_paso4_telefono_celular_ref_familiar" />

    <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
        android:id="@+id/txtTelefonoFijoRefFamiliar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hint="@string/unete_paso4_telefono_fijo_ref_familiar" />

    <RelativeLayout
        android:id="@+id/seccionFiador"
        style="@style/unete_section">

        <com.google.android.material.textview.MaterialTextView
            style="@style/unete_section_title"
            android:text="@string/unete_bo_paso4_seccion_aval" />

        <ImageView style="@style/unete_section_img" />
    </RelativeLayout>

    <com.github.aakira.expandablelayout.ExpandableLinearLayout
        android:id="@+id/expFiador"
        style="@style/unete_section_exp"
        app:ael_duration="400">

        <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
            android:id="@+id/txtAvalPrimerNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hint="@string/primer_nombre" />

        <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
            android:id="@+id/txtAvalSegundoNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hint="@string/segundo_nombre" />

        <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
            android:id="@+id/txtAvalApellidoPaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hint="@string/apellito_paterno" />

        <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
            android:id="@+id/txtAvalApellidoMaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hint="@string/apellito_materno" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
                android:id="@+id/txtAvalDocumento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                custom:hint="@string/documento_identidad"
                custom:validateIconVisible="false" />

        </LinearLayout>

        <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
            android:id="@+id/txtAvalCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hint="@string/unete_paso4_aval_ciudad" />

        <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
            android:id="@+id/txtAvalDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hint="@string/direccion_completa" />

        <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
            android:id="@+id/txtAvalTelefonoCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hint="@string/telefono_celular" />

        <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
            android:id="@+id/txtAvalTelefonoFijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hint="@string/telefono_fijo" />

    </com.github.aakira.expandablelayout.ExpandableLinearLayout>


    <RelativeLayout
        android:id="@+id/seccionNoFamiliar"
        style="@style/unete_section">

        <com.google.android.material.textview.MaterialTextView
            style="@style/unete_section_title"
            android:text="@string/seccion_ref_no_familiar" />
    </RelativeLayout>

    <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
        android:id="@+id/txtNoFamiliarPrimerNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hint="@string/unete_paso4_primer_nombre_no_familiar" />

    <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
        android:id="@+id/txtNoFamiliarApellidoPaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hint="@string/unete_paso4_apellido_paterno_no_familiar" />

    <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
        android:id="@+id/txtNoFamiliarCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hint="@string/unete_paso4_telefono_celular_no_familiar" />

    <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
        android:id="@+id/txtNoFamiliarTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hint="@string/unete_paso4_telefono_fijo_no_familiar" />


    <RelativeLayout
        android:id="@+id/seccionMeta"
        style="@style/unete_section">

        <com.google.android.material.textview.MaterialTextView
            style="@style/unete_section_title"
            android:text="@string/seccion_meta" />

        <ImageView style="@style/unete_section_img" />
    </RelativeLayout>

    <com.github.aakira.expandablelayout.ExpandableLinearLayout
        android:id="@+id/expMeta"
        style="@style/unete_section_exp"
        app:ael_duration="400">

        <biz.belcorp.salesforce.modules.postulants.features.widget.validUnete.UEditText
            android:id="@+id/txtMetaMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:hint="@string/monto" />

    </com.github.aakira.expandablelayout.ExpandableLinearLayout>

    <com.google.android.material.textview.MaterialTextView
        style="@style/unete_obligatorio_label"
        android:text="@string/campos_obligatorios" />

</LinearLayout>
